crates/main/amethystate/tests/snapshots/depth_is_refused_before_it_is_written__refuses_past_the_ceiling_ron.snap
---
source: crates/main/amethystate/tests/depth_is_refused_before_it_is_written.rs
expression: shape(&report)
---
the value could not be encoded or decoded
├╴path: deep.value
├╴the path spends 2 levels and the value goes past the 62 that are left
├╴this store reads at most 64 levels
├╴a value deeper than the reader accepts is written without complaint and cannot be read back
╰╴file: <store>
