crates/main/amethystate/tests/snapshots/depth_is_refused_before_it_is_written__refuses_past_the_key_cap_json.snap
---
source: crates/main/amethystate/tests/depth_is_refused_before_it_is_written.rs
expression: shape(&report)
---
a name that cannot be a level
├╴path: a.b.c.d
├╴levels: 4, and the limit is 3
├╴set by: limits(|l| l.key_depth(..))
├╴what is stored here spends the same budget - this store reads 127 levels in all
╰╴store: <store>
